--- a/zerosicx-site/index.html
+++ b/zerosicx-site/index.html
@@ -2,31 +2,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Hannah Carino</title>
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Sacramento&display=swap" rel="stylesheet">
+
+    <!-- My stylesheet -->
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
     <!-- Header section with navbar and introduction -->
-    <header class="top-container">
+    <header class="intro-container">
       <!-- Nav bar -->
       <nav class="navbar">
         <!-- Logo -->
-        <img src="" alt="">
+        <img class="logo" src="images/self-drawing.jpg" alt="">
 
         <ul>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Course Status</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="nav-item"><a href="#">About Me</a></li>
+          <li class="nav-item"><a href="#">Projects</a></li>
+          <li class="nav-item"><a href="#">Course Status</a></li>
+          <li class="nav-item"><a href="#">Contact</a></li>
         </ul>
       </nav>
 
-      <div class="intro-text">
+      <div class="intro-content">
+
         <h1>I'm Hannah</h1>
-        <p>I'm a high-achieving and ambitious Software Engineering Student.</p>
+
+        <!-- Self portrait image -->
+        <img class="intro-portrait" src="images/self-drawing.jpg" alt="">
+
+        <div class="intro-text">
+          <p>I'm a high-achieving and ambitious
+            <br>Software Engineering Student.</p>
+        </div>
       </div>
 
-      <!-- Self portrait image -->
-      <img src="" alt="">
     </header>
 
     <!-- Main content section. -->
