changed logo image to brand name, set max-width for navbar

--- a/zerosicx-site/index.html
+++ b/zerosicx-site/index.html
@@ -18,7 +18,8 @@
       <!-- Nav bar -->
       <nav class="navbar">
         <!-- Logo -->
-        <img class="logo" src="images/self-drawing.jpg" alt="">
+        <!-- <img class="logo" src="images/self-drawing.jpg" alt=""> -->
+        <h2 class="logo">ZEROSICX</h2>
 
         <ul>
           <li class="nav-item"><a href="#">About Me</a></li>
