created grid layouts for main section

--- a/zerosicx-site/index.html
+++ b/zerosicx-site/index.html
@@ -46,15 +46,33 @@
 
     <!-- Main content section. -->
     <!-- Use grids to show these side-by-side -->
-    <main class="main-about">
-      <h1>About Me</h1>
+    <main class="grid-container main-about">
+
+      <div class="grid-title">
+        <h1>About Me</h1>
+
+      </div>
+
+      <div class="grid-about">
+        <p>hello</p>
+
+      </div>
 
     </main>
 
-    <main class="main-projects">
-      <h1>Projects</h1>
+    <main class="grid-container main-projects">
+      <div class="grid-title">
+        <h1>Projects</h1>
+
+      </div>
+
+      <div class="grid-about">
+        <p>hello</p>
+
+      </div>
     </main>
 
+    <!-- Footer section -->
     <footer>
       <!-- Make a sticky footer with a button that scrolls to the top upon click -->
     </footer>
