--- a/zerosicx-site/index.html
+++ b/zerosicx-site/index.html
@@ -7,10 +7,14 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;900&family=Sacramento&display=swap" rel="stylesheet">
 
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/0f71cd6149.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <!-- Header section with navbar and introduction -->
@@ -50,11 +54,17 @@
 
       <div class="grid-title">
         <h1>About Me</h1>
+        <a class="see-more" href="#">See my CV...</a>
 
       </div>
 
       <div class="grid-about">
-        <p>hello</p>
+        <ul>
+          <li>Second year of Software Engineering at Unviersity of Waikato</li>
+          <li>Strong team and task/goal organisation skills. Proficient at academic writing.</li>
+          <li>Experience in <span class="languages">HTML, CSS, JavaScript, C, C#, SQL, Python, MatLab, Java</span></li>
+          <li>Freelance Illustrator</li>
+        </ul>
 
       </div>
 
@@ -63,11 +73,18 @@
     <main class="grid-container main-projects">
       <div class="grid-title">
         <h1>Projects</h1>
+        <a class="see-more" href="#">See more projects...</a>
 
       </div>
 
       <div class="grid-about">
-        <p>hello</p>
+        <p><u>Most Recent</u></p>
+        <p>Tasked to make a responsive android app about the Computing and Mathematical Sciences
+          Department at the University of Waikato</p>
+        <p>Using XML, Java, and Git version control, I was able to get full marks by putting to use good coding practice.</p>
+        <img class="project-example-img" src="images/android-main-activity.png" alt="">
+        <img class="project-example-img" src="images/android-detail-activity.png" alt="">
+        <a class="see-more" href="#">See more about this project...</a>
 
       </div>
     </main>
