Added project card template

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -49,8 +49,19 @@
 
     <!-- Main content section. -->
     <!-- Use grids to show these side-by-side -->
-    <main class="flex-container main-about">
-
+    <main class="main-projects">
+        <!-- Dummy Object -->
+        <div class="grid-wrapper">
+            <div class="project-card">
+                <h2>Title</h2>
+                <p>Short description about the project lorem ipsum and shiii</p>
+                <img class="project-card-preview" src="../images/example.png" alt="example image">
+            </div>
+            <div class="project-card">Two</div>
+            <div class="project-card">Three</div>
+            <div class="project-card">Four</div>
+            <div class="project-card">Five</div>
+        </div>
 
     </main>
 
