Added image assets, created project cards

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -53,9 +53,29 @@
         <!-- Dummy Object -->
         <div class="grid-wrapper">
             <div class="project-card">
-                <h2>Title</h2>
-                <p>Short description about the project lorem ipsum and shiii</p>
-                <img class="project-card-preview" src="../images/example.png" alt="example image">
+                <h2>UX Subscription Manager</h2>
+                <p>Detailed digital prototype of a Subscription Manager.</p>
+                <img class="project-card-preview" src="../images/subs-preview.png" alt="example image">
+            </div>
+            <div class="project-card">
+                <h2>Maps, Weather and Cameras</h2>
+                <p>Maps application that uses Google Maps, Windy Cams and Open Weather Map APIs</p>
+                <img class="project-card-preview" src="../images/maps-preview.png" alt="example image">
+            </div>
+            <div class="project-card">
+                <h2>Horror Movie Catalogue</h2>
+                <p>Catalogue for Horror Movies using plain HTML, CSS, JS, PHP with sorting methods</p>
+                <img class="project-card-preview" src="../images/horror-prev.png" alt="example image">
+            </div>
+            <div class="project-card">
+                <h2>Video Conferencing Application</h2>
+                <p>Built front end using React and Redux as a part of a group project.</p>
+                <img class="project-card-preview" src="" alt="example image">
+            </div>
+            <div class="project-card">
+                <h2>Circuit Simulator</h2>
+                <p>C#, Visual Studio Assignment. Achieved 100%.</p>
+                <img class="project-card-preview" src="" alt="example image">
             </div>
             <div class="project-card">Two</div>
             <div class="project-card">Three</div>
