Added images for video chat project, modified card sizes

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -54,12 +54,12 @@
         <div class="grid-wrapper">
             <div class="project-card">
                 <h2>UX Subscription Manager</h2>
-                <p>Detailed digital prototype of a Subscription Manager.</p>
+                <p>Detailed digital prototype of a Subscription Manager using Figma.</p>
                 <img class="project-card-preview" src="../images/subs-preview.png" alt="example image">
             </div>
             <div class="project-card">
                 <h2>Maps, Weather and Cameras</h2>
-                <p>Maps application that uses Google Maps, Windy Cams and Open Weather Map APIs</p>
+                <p>Maps application that uses Google Maps, Windy Cams and Open Weather Map APIs using Android Studio</p>
                 <img class="project-card-preview" src="../images/maps-preview.png" alt="example image">
             </div>
             <div class="project-card">
@@ -70,17 +70,20 @@
             <div class="project-card">
                 <h2>Video Conferencing Application</h2>
                 <p>Built front end using React and Redux as a part of a group project.</p>
-                <img class="project-card-preview" src="" alt="example image">
+                <img class="project-card-preview" src="../images/video-1.png" alt="example image">
             </div>
             <div class="project-card">
                 <h2>Circuit Simulator</h2>
                 <p>C#, Visual Studio Assignment. Achieved 100%.</p>
-                <img class="project-card-preview" src="" alt="example image">
+                <!-- <img class="project-card-preview" src="" alt="example image"> -->
+                <p>Image not yet available.</p>
             </div>
-            <div class="project-card">Two</div>
-            <div class="project-card">Three</div>
-            <div class="project-card">Four</div>
-            <div class="project-card">Five</div>
+            <div class="project-card">
+                <h2>Project Manager</h2>
+                <p>Using C# and MySQL, I built a project manager with login functionality for programmers and managers.</p>
+                <!-- <img class="project-card-preview" src="" alt="example image"> -->
+                <p>Image not yet available.</p>
+            </div>
         </div>
 
     </main>
