Added 2 project cards, justified grid contents to center

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,6 +73,16 @@
                 <img class="project-card-preview" src="../images/video-1.png" alt="example image">
             </div>
             <div class="project-card">
+                <h2>UoW CMS Information</h2>
+                <p>Using Android Studio, built a simple information application for the CMS cohort.</p>
+                <img class="project-card-preview" src="../images/waikato-1.png" alt="example image">
+            </div>
+            <div class="project-card">
+                <h2>HTTPs Simplified</h2>
+                <p>A responsive website designed to introduce the concept of HTTP(s) to high school students. Only HTML and CSS.</p>
+                <img class="project-card-preview" src="../images/https-prev.png" alt="example image">
+            </div>
+            <div class="project-card">
                 <h2>Circuit Simulator</h2>
                 <p>C#, Visual Studio Assignment. Achieved 100%.</p>
                 <!-- <img class="project-card-preview" src="" alt="example image"> -->
