Updated link colours, updated latest project

--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
 
       <div class="flex-box flex-details">
         <p><u>Most Recent</u></p>
-        <p>Tasked to make a responsive android app about the Computing and Mathematical Sciences
-          Department at the University of Waikato</p>
-        <p>Using XML, Java, and Git version control, I was able to get full marks by putting to use good coding practice.</p>
-        <img class="project-example-img" src="images/android-main-activity.png" alt="">
-        <img class="project-example-img" src="images/android-detail-activity.png" alt="">
-        <a class="see-more" href="#">See more about this project...</a>
+        <p>Tasked to make a responsive android application that implements the Google Maps API, Open Weather API and Windy Cams API, a user can see the weather at any selected location, and the five nearest road cameras with visual previews. Complete with auto-fill suggestions using Google Places.</p>
+        <p>Completed as a peer programming exercise, my partner and I used effective project management techniques and source control using GitLab.</p>
+        <img class="project-example-img" src="images/maps-1.png" alt="">
+        <img class="project-example-img" src="images/maps-2.png" alt="">
+        <!-- <a class="see-more" href="#">See more about this project...</a> -->
 
       </div>
     </main>
