--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,7 +92,7 @@
                 <h2>Project Manager</h2>
                 <p>Using C# and MySQL, I built a project manager with login functionality for programmers and managers.</p>
                 <!-- <img class="project-card-preview" src="" alt="example image"> -->
-                <p>Image not yet available.</p>
+                <img class="project-card-preview" src="../images/data-prev.png" alt="example image">
             </div>
         </div>
 
