Added message that website is incomplete in index page

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
         <img class="project-example-img" src="images/maps-1.png" alt="">
         <img class="project-example-img" src="images/maps-2.png" alt="">
         <!-- <a class="see-more" href="#">See more about this project...</a> -->
-
       </div>
+    </main>
+
+    <main class="flex-container main-projects">
+      <div class="flex-box flex-title">
+        <h2>This website is still in development. Please feel free to provide me advice and feedback by contacting my email: hcsofteng@gmail.com</h2>
     </main>
 
     <!-- Footer section -->
