--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="nav-list">
           <li class="nav-item"><a href="#">About Me</a></li>
           <li class="nav-item"><a href="pages/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="#">Course Status</a></li>
+          <li class="nav-item"><a href="pages/course.html">Course Status</a></li>
           <li class="nav-item"><a href="#">Contact</a></li>
         </ul>
         <i class="fa-solid fa-bars hamburger"></i>
@@ -64,7 +64,7 @@
         <ul>
           <li>Second year of Software Engineering at Unviersity of Waikato</li>
           <li>Strong team and project management skills. Proficient in academic writing.</li>
-          <li>Experience in <span class="languages">HTML, CSS, JavaScript, C, C#, SQL, Python, MatLab, Java</span></li>
+          <li>Experience in <span class="languages">enterprise Full Stack Web Development and Machine Learning</span></li>
           <li>Freelance Illustrator</li>
         </ul>
 
