--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="../index.html">About Me</a></li>
                 <li class="nav-item"><a href="#">Projects</a></li>
-                <li class="nav-item"><a href="#">Course Status</a></li>
+                <li class="nav-item"><a href="course.html">Course Status</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
             </ul>
             <i class="fa-solid fa-bars hamburger"></i>
