Made top accordion panel open by default

--- a/pages/course.html
+++ b/pages/course.html
@@ -53,7 +53,7 @@
     <main class="main-projects">
 
         <button class="accordion">Yearly Progress</button>
-        <div class="panel main-panel">
+        <div class="main-panel panel">
             <table>
                 <thead>
                     <td>Year</td>
@@ -61,6 +61,12 @@
                     <td>Points</td>
                     <td>Completion</td>
                 </thead>
+                <tr>
+                    <td>4th Year</td>
+                    <td>-/8</td>
+                    <td>-/120</td>
+                    <td>-</td>
+                </tr>
                 <tr>
                     <td>3rd Year</td>
                     <td>2/8</td>
