--- a/pages/course.html
+++ b/pages/course.html
@@ -36,10 +36,10 @@
                 <li class="nav-item"><a href="#">Course Status</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
             </ul>
-            <i class="fa-solid fa-bars hamburger"></i>
+            <i class="fa-solid fa-bars" id="hamburger"></i>
         </nav>
 
-        <div class="intro-content">
+        <div class="intro-content" id="intro-content">
 
             <h1>Course Status</h1>
                 <p class="intro-text">Last updated: 21st December 2022</p>
@@ -48,9 +48,18 @@
 
     </header>
 
+    <div id="hamburger-menu">
+        <ul class="nav-hamburger">
+            <li class="nav-item"><a href="../index.html">About Me</a></li>
+            <li class="nav-item"><a href="../pages/projects.html">Projects</a></li>
+            <li class="nav-item"><a href="../pages/course.html">Course Status</a></li>
+            <li class="nav-item"><a href="#">Contact</a></li>
+        </ul>
+    </div>
+
     <!-- Main content section. -->
     <!-- Use grids to show these side-by-side -->
-    <main class="main-projects">
+    <main id="main-content" class="main-projects">
 
         <button class="accordion">Yearly Progress</button>
         <div class="main-panel panel">
@@ -99,6 +108,8 @@
         <!-- Make a sticky footer with a button that scrolls to the top upon click -->
     </footer>
     <script src="../javascript/course.js"></script>
+    <script src="../javascript/script.js"></script>
+
 </body>
 
 </html>
