--- a/pages/course.html
+++ b/pages/course.html
@@ -18,6 +18,8 @@
     <!-- My stylesheet -->
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
     <link rel="stylesheet" href="../css/course.css" type="text/css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
 
 </head>
 
