--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
   </head>
   <body>
