Fixed images and project page link in course.html

--- a/pages/course.html
+++ b/pages/course.html
@@ -34,7 +34,7 @@
 
             <ul class="nav-list">
                 <li class="nav-item"><a href="../index.html">About Me</a></li>
-                <li class="nav-item"><a href="#">Projects</a></li>
+                <li class="nav-item"><a href="projects.html">Projects</a></li>
                 <li class="nav-item"><a href="#">Course Status</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
             </ul>
