Fixed link formatting, added simply contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 
     <!-- My stylesheet -->
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <link rel="stylesheet" href="../css/course.css" type="text/css">
+    <link rel="stylesheet" href="../css/contact.css" type="text/css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
 
@@ -34,9 +34,9 @@
 
             <ul class="nav-list">
                 <li class="nav-item"><a href="../index.html">About Me</a></li>
-                <li class="nav-item"><a href="../pages/projects.html">Projects</a></li>
-                <li class="nav-item"><a href="../pages/course.html">Course Status</a></li>
-                <li class="nav-item"><a href="../pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="projects.html">Projects</a></li>
+                <li class="nav-item"><a href="course.html">Course Status</a></li>
+                <li class="nav-item"><a href="#">Contact</a></li>
             </ul>
             <i class="fa-solid fa-bars" id="hamburger"></i>
         </nav>
@@ -44,7 +44,7 @@
         <div class="intro-content" id="intro-content">
 
             <h1>Course Status</h1>
-                <p class="intro-text">Last updated: 21st December 2022</p>
+            <p class="intro-text">Last updated: 21st December 2022</p>
 
         </div>
 
@@ -55,53 +55,17 @@
             <li class="nav-item"><a href="../index.html">About Me</a></li>
             <li class="nav-item"><a href="../pages/projects.html">Projects</a></li>
             <li class="nav-item"><a href="../pages/course.html">Course Status</a></li>
-            <li class="nav-item"><a href="#">Contact</a></li>
+            <li class="nav-item"><a href="../pages/contact.html">Contact</a></li>
         </ul>
     </div>
 
     <!-- Main content section. -->
     <!-- Use grids to show these side-by-side -->
-    <main id="main-content" class="main-projects">
-
-        <button class="accordion">Yearly Progress</button>
-        <div class="main-panel panel">
-            <table>
-                <thead>
-                    <td>Year</td>
-                    <td>Papers</td>
-                    <td>Points</td>
-                    <td>Completion</td>
-                </thead>
-                <tr>
-                    <td>4th Year</td>
-                    <td>-/8</td>
-                    <td>-/120</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>3rd Year</td>
-                    <td>2/8</td>
-                    <td>30/120</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>2nd Year</td>
-                    <td>8/8</td>
-                    <td>120/120</td>
-                    <td>✅</td>
-                </tr>
-                <tr>
-                    <td>1st Year</td>
-                    <td>8/8</td>
-                    <td>120/120</td>
-                    <td>✅</td>
-                </tr>
-            </table>
-        </div>
-        
-        <button class="accordion">Completed Papers</button>
-        <div class="panel">
-            <p>Lorem ipsum...</p>
+    <main id="main-content" class="main-contact">
+        <div class="contact-details-container">
+            <span class="contact-detail">Hannah Carino</span>
+            <span class="contact-detail">Work Email: <a href="mailto:hcsofteng@gmail.com">hcsofteng@gmail.com</a></span>
+            <span class="contact-detail"><a href="https://www.linkedin.com/in/hc243/">LinkedIn</a> <a href="https://github.com/zerosicx">Github</a></span>
         </div>
     </main>
 
@@ -109,7 +73,6 @@
     <footer>
         <!-- Make a sticky footer with a button that scrolls to the top upon click -->
     </footer>
-    <script src="../javascript/course.js"></script>
     <script src="../javascript/script.js"></script>
 
 </body>
