--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <h2 class="logo">ZEROSICX</h2>
 
         <ul class="nav-list">
-          <li class="nav-item"><a href="#">About Me</a></li>
-          <li class="nav-item"><a href="pages/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="pages/course.html">Course Status</a></li>
-          <li class="nav-item"><a href="#">Contact</a></li>
+          <li class="nav-item"><a href="../index.html">About Me</a></li>
+          <li class="nav-item"><a href="../pages/projects.html">Projects</a></li>
+          <li class="nav-item"><a href="../pages/course.html">Course Status</a></li>
+          <li class="nav-item"><a href="../pages/contact.html">Contact</a></li>
         </ul>
         <i class="fa-solid fa-bars" id="hamburger"></i>
       </nav>
