Added style to increase portrait size in mobile view

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="flex-box flex-details">
           <ul>
-            <li>Second year of Software Engineering at Unviersity of Waikato</li>
+            <li>Going into my 3.5th year of Software Engineering at Unviersity of Waikato</li>
             <li>Strong team and project management skills. Proficient in academic writing.</li>
             <li>Experience in <span class="languages">enterprise Full Stack Web Development and Machine Learning</span></li>
             <li>Freelance Illustrator</li>
