Fixed index page navbar links

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <ul class="nav-list">
           <li class="nav-item"><a href="index.html">About Me</a></li>
-          <li class="nav-item"><a href="/pages/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="/pages/course.html">Course Status</a></li>
-          <li class="nav-item"><a href="/pages/contact.html">Contact</a></li>
+          <li class="nav-item"><a href="pages/projects.html">Projects</a></li>
+          <li class="nav-item"><a href="pages/course.html">Course Status</a></li>
+          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
         </ul>
         <i class="fa-solid fa-bars" id="hamburger"></i>
       </nav>
