Fixed navigation menu in small screen view

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <div id="hamburger-menu">
-      <ul class="nav-list">
+      <ul class="nav-hamburger">
         <li class="nav-item"><a href="index.html">About Me</a></li>
         <li class="nav-item"><a href="pages/projects.html">Projects</a></li>
         <li class="nav-item"><a href="pages/course.html">Course Status</a></li>
