--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="flex-box flex-title">
           <h1>About Me</h1>
-          <a class="see-more" href="files/CV2022.pdf" download="CV2022.pdf">See my CV...</a>
+          <a class="see-more" href="files/CV_Hannah_Carino.pdf" download="files/CV_Hannah_Carino.pdf">See my CV...</a>
 
         </div>
 
